Make games section

--- a/src/components/Intro.astro
+++ b/src/components/Intro.astro
@@ -16,8 +16,8 @@
   </div>
   <div>
     <p>
-      The diy multideck is a deck of 120 poker-sized playing cards that lets you
-      play many games by writing in the cardas and using a bit of imagination.
+      The DIY multideck is a deck of 120 poker-sized playing cards that lets you
+      play many games by writing in the cards and using a bit of imagination.
     </p>
 
     <h2>Features</h2>
