--- a/src/layouts/ContentLayout.astro
+++ b/src/layouts/ContentLayout.astro
@@ -2,29 +2,30 @@
 /* 
   This layout is used in pages that render markdoc content
   - pages/blog/[slug].astro
+  - pages/games/[slug].astro
 */
 
 // Import the global.css file here so that it is included on
-import "../styles/global.css";
+import '../styles/global.css'
 
-import GoogleFont from "./GoogleFont.astro";
-import FontAwesome from "./FontAwesome.astro";
-import ThemeScript from "./ThemeScript.astro";
-import Favicon from "./Favicon.astro";
-import Header from "../components/Header.astro";
-import Footer from "../components/Footer.astro";
+import GoogleFont from './GoogleFont.astro'
+import FontAwesome from './FontAwesome.astro'
+import ThemeScript from './ThemeScript.astro'
+import Favicon from './Favicon.astro'
+import Header from '../components/Header.astro'
+import Footer from '../components/Footer.astro'
 
 export interface Props {
-  title: string;
-  date: Date;
+  title: string
+  date: Date
 }
 
-const { title, date } = Astro.props;
-const formattedDate = new Date(date).toLocaleDateString("en-us", {
-  year: "numeric",
-  month: "short",
-  day: "numeric",
-});
+const { title, date } = Astro.props
+const formattedDate = new Date(date).toLocaleDateString('en-us', {
+  year: 'numeric',
+  month: 'short',
+  day: 'numeric',
+})
 ---
 
 <!DOCTYPE html>
@@ -41,9 +42,7 @@ const formattedDate = new Date(date).toLocaleDateString("en-us", {
     <FontAwesome />
   </head>
 
-  <body
-    class="min-h-screen max-w-3xl mx-auto px-6 sm:px-8"
-  >
+  <body class="min-h-screen max-w-3xl mx-auto px-6 sm:px-8">
     <Header />
     <main id="main">
       <section class="blog-post prose max-w-none prose-sleek">
@@ -57,9 +56,9 @@ const formattedDate = new Date(date).toLocaleDateString("en-us", {
       body {
         display: grid;
         grid-template-areas:
-          "header"
-          "main"
-          "footer";
+          'header'
+          'main'
+          'footer';
         grid-template-rows: 5rem minmax(0, 1fr) 5rem;
         grid-template-columns: minmax(0, 1fr);
       }
