--- a/src/layouts/PageLayout.astro
+++ b/src/layouts/PageLayout.astro
@@ -3,18 +3,18 @@
   This layout is used in 
   - pages/index.astro
   - pages/blog.astro
-  - pages/projects.astro
+  - pages/games.astro
 */
 
 // Import the global.css file here so that it is included on
-import "../styles/global.css";
+import '../styles/global.css'
 
-import GoogleFont from "./GoogleFont.astro";
-import FontAwesome from "./FontAwesome.astro";
-import ThemeScript from "./ThemeScript.astro";
-import Favicon from "./Favicon.astro";
-import Header from "../components/Header.astro";
-import Footer from "../components/Footer.astro";
+import GoogleFont from './GoogleFont.astro'
+import FontAwesome from './FontAwesome.astro'
+import ThemeScript from './ThemeScript.astro'
+import Favicon from './Favicon.astro'
+import Header from '../components/Header.astro'
+import Footer from '../components/Footer.astro'
 ---
 
 <!DOCTYPE html>
@@ -31,9 +31,7 @@ import Footer from "../components/Footer.astro";
     <FontAwesome />
   </head>
 
-  <body
-    class="min-h-screen max-w-3xl mx-auto px-6 sm:px-8"
-  >
+  <body class="min-h-screen max-w-3xl mx-auto px-6 sm:px-8">
     <Header />
     <main id="main">
       <slot name="main" />
@@ -43,9 +41,9 @@ import Footer from "../components/Footer.astro";
       body {
         display: grid;
         grid-template-areas:
-          "header"
-          "main"
-          "footer";
+          'header'
+          'main'
+          'footer';
         grid-template-rows: 5rem minmax(0, 1fr) 5rem;
         grid-template-columns: minmax(0, 1fr);
       }
