--- a/src/pages/games.astro
+++ b/src/pages/games.astro
@@ -1,13 +1,13 @@
 ---
 import { readAll } from '../lib/markdoc/read'
-import { blog } from '../lib/markdoc/frontmatter.schema'
+import { game } from '../lib/markdoc/frontmatter.schema'
 import PageLayout from '../layouts/PageLayout.astro'
 import PageMeta from '../components/PageMeta.astro'
 import { SITE_TITLE } from '../config'
 
 const posts = await readAll({
-  directory: 'blog',
-  frontmatterSchema: blog,
+  directory: 'games',
+  frontmatterSchema: game,
 })
 
 const sortedPosts = posts.sort(
@@ -18,7 +18,7 @@ const sortedPosts = posts.sort(
 ---
 
 <PageLayout>
-  <PageMeta title={`Blog | ${SITE_TITLE}`} slot="meta" />
+  <PageMeta title={`Games | ${SITE_TITLE}`} slot="meta" />
   <section slot="main">
     <ul>
       {
@@ -33,12 +33,12 @@ const sortedPosts = posts.sort(
           return (
             <li class="grid grid-cols-[1fr] md:grid-cols-[1fr_auto] mb-3 md:gap-2 items-start">
               <div class="title">
-                  <a
-                    href={`/blog/${post.slug}`}
-                    class="unset hover:text-text-link"
-                  >
-                    {post.frontmatter.title}
-                  </a>
+                <a
+                  href={`/games/${post.slug}`}
+                  class="unset hover:text-text-link"
+                >
+                  {post.frontmatter.title}
+                </a>
               </div>
               <div class="text-text-muted text-sm italic">
                 <time datetime={post.frontmatter.date.toISOString()}>
