Fix some styles

--- a/src/components/Intro.astro
+++ b/src/components/Intro.astro
@@ -33,9 +33,19 @@
       <strong>symbol</strong>.
     </p>
     <ul>
-      <li>3 × ABCDEFGHIJKLMNOPQRSTUVWXYZ</li>
-      <li>1 × ÁÅÄĄÆĆČÇÐÉĖĘĞÍĮŁŃÑÓÖŐÕØŚŠŞẞÚÜŰŲŪÝŹŽŻÞ</li>
-      <li>1 × *•@#$</li>
+      <li>
+        3 × <span class="bg-blue-100 break-words px-2 rounded"
+          >ABCDEFGHIJKLMNOPQRSTUVWXYZ</span
+        >
+      </li>
+      <li>
+        1 × <span class="bg-blue-100 break-words px-2 rounded"
+          >ÁÅÄĄÆĆČÇÐÉĖĘĞÍĮŁŃÑÓÖŐÕØŚŠŞẞÚÜŰŲŪÝŹŽŻÞ</span
+        >
+      </li>
+      <li>
+        1 × <span class="bg-blue-100 break-words px-2 rounded">*•@#$</span>
+      </li>
     </ul>
 
     <blockquote>
