--- a/src/components/Intro.astro
+++ b/src/components/Intro.astro
@@ -34,17 +34,19 @@
     </p>
     <ul>
       <li>
-        3 × <span class="bg-blue-100 break-words px-2 rounded"
+        3 × <span class="bg-black/5 break-words px-2 rounded dark:bg-black/20"
           >ABCDEFGHIJKLMNOPQRSTUVWXYZ</span
         >
       </li>
       <li>
-        1 × <span class="bg-blue-100 break-words px-2 rounded"
+        1 × <span class="bg-black/5 break-words px-2 rounded dark:bg-black/20"
           >ÁÅÄĄÆĆČÇÐÉĖĘĞÍĮŁŃÑÓÖŐÕØŚŠŞẞÚÜŰŲŪÝŹŽŻÞ</span
         >
       </li>
       <li>
-        1 × <span class="bg-blue-100 break-words px-2 rounded">*•@#$</span>
+        1 × <span class="bg-black/5 break-words px-2 rounded dark:bg-black/20"
+          >*•@#$</span
+        >
       </li>
     </ul>
 
