--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -16,6 +16,7 @@ import DarkModeToggle from './DarkModeToggle.astro'
         <li><HeaderLink href="/">Home</HeaderLink></li>
         <li><HeaderLink href="/games">Games</HeaderLink></li>
         <li><HeaderLink href="/blog">Blog</HeaderLink></li>
+        <li><HeaderLink href="/buy">Buy</HeaderLink></li>
       </ul>
     </section>
   </nav>
@@ -23,15 +24,10 @@ import DarkModeToggle from './DarkModeToggle.astro'
     class="max-[375px]:hidden justify-self-end py-2 flex items-center content-center text-text-bold"
   >
     <a
-      class="unset text-xl ml-4 hover:text-text-link"
+      class="unset text-xl ml-4 outline-none focus-visible:ring-2 ring-stone-700 rounded-sm ring-offset-4"
       href="https://boardgamegeek.com/"
     >
-      <svg
-        aria-hidden="true"
-        xmlns="http://www.w3.org/2000/svg"
-        width="64"
-        viewBox="0 0 173 90"
-      >
+      <svg aria-hidden="true" width="64" viewBox="0 0 173 90">
         <g fill="none" fill-rule="evenodd">
           <path
             fill="#FF5100"
