--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,19 +3,34 @@
 
 <footer class="text-sm leading-[1.75] mt-4">
   <div>
-    This blog is built with 
+    <span>Made with</span>
+
+    <svg
+      class="text-red-500 inline-block align-[-3px]"
+      width="16"
+      height="16"
+      viewBox="0 0 24 24"
+      stroke-width="2"
+      stroke="currentColor"
+      fill="none"
+      stroke-linecap="round"
+      stroke-linejoin="round"
+      aria-label="love"
+    >
+      <path
+        d="M6.979 3.074a6 6 0 0 1 4.988 1.425l.037 .033l.034 -.03a6 6 0 0 1 4.733 -1.44l.246 .036a6 6 0 0 1 3.364 10.008l-.18 .185l-.048 .041l-7.45 7.379a1 1 0 0 1 -1.313 .082l-.094 -.082l-7.493 -7.422a6 6 0 0 1 3.176 -10.215z"
+        stroke-width="0"
+        fill="currentColor"></path>
+    </svg>
+
+    <span>by</span>
     <a
-      class="unset gradient-link tracking-wider font-bold bg-clip-text text-transparent bg-gradient-to-r from-[#f57111] to-[#f79605] hover:after:bg-gradient-to-r hover:after:from-[#f57111] hover:after:to-[#f79605]"
-      href={"https://github.com/flexdinesh/blogster"}
+      class="unset gradient-link tracking-wider font-bold bg-clip-text text-transparent bg-gradient-to-r from-[#008bb1] to-[#1476ff] hover:after:bg-gradient-to-r hover:after:from-[#0090b7] hover:after:to-[#1476ff]"
+      href="https://mauriciabad.com"
       target="_blank"
     >
-      Blogster</a> and hosted in
-    <a
-      class="unset gradient-link tracking-wider font-bold bg-clip-text text-transparent bg-gradient-to-r from-[#00abda] to-[#1476ff] hover:after:bg-gradient-to-r hover:after:from-[#00abda] hover:after:to-[#1476ff]"
-      href={"https://www.netlify.com"}
-      target="_blank"
-    >
-      Netlify</a>.
+      Maurici Abad</a
+    ><span>.</span>
   </div>
 </footer>
 
@@ -42,7 +57,7 @@
     left: 0;
     right: 0;
     bottom: -2px;
-    content: "";
+    content: '';
     height: 2px;
     position: absolute;
     transform: translateZ(0) scaleX(0);
