Change we for I

--- a/src/pages/buy.astro
+++ b/src/pages/buy.astro
@@ -22,7 +22,7 @@ import PageLayout from '../layouts/PageLayout.astro'
     </p>
 
     <p class="mt-4 text-center">
-      💡 But we can send you an email when we release it.
+      💡 But I can send you an email when I release it.
     </p>
 
     <label
