--- a/src/pages/games/[slug].astro
+++ b/src/pages/games/[slug].astro
@@ -3,6 +3,7 @@ import { readOne, readAll } from '../../lib/markdoc/read'
 import { game } from '../../lib/markdoc/frontmatter.schema'
 import Renderer from '../../components/Renderer.astro'
 import GamePostMeta from '../../components/GamePostMeta.astro'
+import Comments from '../../components/Comments.astro'
 import ContentLayout from '../../layouts/ContentLayout.astro'
 import { SITE_URL } from '../../config'
 
@@ -43,4 +44,5 @@ const ogImageAbsoluteUrl = frontmatter.ogImagePath
     slot="meta"
   />
   <Renderer content={content} slot="content" />
+  <Comments />
 </ContentLayout>
