change const to var

--- a/src/components/Comments.astro
+++ b/src/components/Comments.astro
@@ -3,7 +3,7 @@
 
 <script>
   // @ts-nocheck
-  const remark_config = {
+  var remark_config = {
     host: 'https://comments.diymultideck.com',
     site_id: 'remark',
     components: ['embed', 'last-comments'],
