assign to window

--- a/src/components/Comments.astro
+++ b/src/components/Comments.astro
@@ -3,7 +3,7 @@
 
 <script>
   // @ts-nocheck
-  var remark_config = {
+  window.remark_config = {
     host: 'https://comments.diymultideck.com',
     site_id: 'remark',
     components: ['embed', 'last-comments'],
