--- a/src/layouts/PageLayout.astro
+++ b/src/layouts/PageLayout.astro
@@ -11,6 +11,7 @@ import '../styles/global.css'
 
 import GoogleFont from './GoogleFont.astro'
 import FontAwesome from './FontAwesome.astro'
+import TablerIcons from './TablerIcons.astro'
 import ThemeScript from './ThemeScript.astro'
 import Favicon from './Favicon.astro'
 import Header from '../components/Header.astro'
@@ -29,6 +30,7 @@ import Footer from '../components/Footer.astro'
     <GoogleFont />
     <ThemeScript />
     <FontAwesome />
+    <TablerIcons />
   </head>
 
   <body class="min-h-screen max-w-3xl mx-auto px-6 sm:px-8">
