Update comments theme

--- a/src/components/Comments.astro
+++ b/src/components/Comments.astro
@@ -10,7 +10,7 @@
     site_id: 'remark',
     components: ['embed', 'last-comments'],
     max_shown_comments: 25,
-    theme: 'dark',
+    theme: 'light',
     show_email_subscription: false,
     simple_view: true,
     no_footer: true,
