--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -5,23 +5,7 @@
   <div>
     <span>Made with</span>
 
-    <svg
-      class="text-red-500 inline-block align-[-3px]"
-      width="16"
-      height="16"
-      viewBox="0 0 24 24"
-      stroke-width="2"
-      stroke="currentColor"
-      fill="none"
-      stroke-linecap="round"
-      stroke-linejoin="round"
-      aria-label="love"
-    >
-      <path
-        d="M6.979 3.074a6 6 0 0 1 4.988 1.425l.037 .033l.034 -.03a6 6 0 0 1 4.733 -1.44l.246 .036a6 6 0 0 1 3.364 10.008l-.18 .185l-.048 .041l-7.45 7.379a1 1 0 0 1 -1.313 .082l-.094 -.082l-7.493 -7.422a6 6 0 0 1 3.176 -10.215z"
-        stroke-width="0"
-        fill="currentColor"></path>
-    </svg>
+    <i class="ti ti-heart text-base text-red-500" aria-label="love"> </i>
 
     <span>by</span>
     <a
