--- a/src/layouts/Favicon.astro
+++ b/src/layouts/Favicon.astro
@@ -3,10 +3,42 @@
   Not a layout. Just a component used in layouts.
 */
 ---
+
+<link
+  rel="apple-touch-icon"
+  sizes="180x180"
+  href="/favicon/apple-touch-icon.png"
+/>
+<link rel="manifest" href="/site.webmanifest" />
+<link rel="mask-icon" href="/favicon/safari-pinned-tab.svg" color="#1f54a4" />
+<meta name="msapplication-TileColor" content="#1f54a4" />
 <meta name="theme-color" content="#ffffff" />
 
-<!-- 
-  This is an example. 
-  Use https://realfavicongenerator.net to generate the icons and manifest. 
--->
-<link href="/favicon.ico" rel="shortcut icon" />
+<link
+  rel="icon"
+  type="image/png"
+  sizes="32x32"
+  href="/favicon/white/favicon-32x32.png"
+  media="(prefers-color-scheme: dark)"
+/>
+<link
+  rel="icon"
+  type="image/png"
+  sizes="16x16"
+  href="/favicon/white/favicon-16x16.png"
+  media="(prefers-color-scheme: dark)"
+/>
+<link
+  rel="icon"
+  type="image/png"
+  sizes="32x32"
+  href="/favicon/black/favicon-32x32.png"
+  media="(prefers-color-scheme: light)"
+/>
+<link
+  rel="icon"
+  type="image/png"
+  sizes="16x16"
+  href="/favicon/black/favicon-16x16.png"
+  media="(prefers-color-scheme: light)"
+/>
