--- a/src/components/BuyBanner.astro
+++ b/src/components/BuyBanner.astro
@@ -7,7 +7,7 @@
   <p class="text-xl mb-6 font-bold">Buy the DIY Multideck now</p>
   <a
     href="/buy"
-    class="bg-white rounded text-blue-700 font-bold uppercase inline-block px-4 py-2"
+    class="bg-white rounded text-blue-700 hover:!text-white hover:!bg-stone-800 font-bold uppercase inline-block px-4 py-2 !bg-none"
     >Buy now</a
   >
 </div>
