--- a/src/layouts/PageLayout.astro
+++ b/src/layouts/PageLayout.astro
@@ -10,6 +10,7 @@
 import '../styles/global.css'
 
 import GoogleFont from './GoogleFont.astro'
+import GoogleAnalytics from './GoogleAnalytics.astro'
 import FontAwesome from './FontAwesome.astro'
 import TablerIcons from './TablerIcons.astro'
 import ThemeScript from './ThemeScript.astro'
@@ -28,6 +29,7 @@ import Footer from '../components/Footer.astro'
     <Favicon />
     <slot name="meta" />
     <GoogleFont />
+    <GoogleAnalytics />
     <ThemeScript />
     <FontAwesome />
     <TablerIcons />
