save gtag to window

--- a/src/layouts/GoogleAnalytics.astro
+++ b/src/layouts/GoogleAnalytics.astro
@@ -8,11 +8,11 @@
   <script>
     // @ts-nocheck
     window.dataLayer = window.dataLayer || []
-    function gtag() {
+    window.gtag = function gtag() {
       dataLayer.push(arguments)
     }
-    gtag('js', new Date())
+    window.gtag('js', new Date())
 
-    gtag('config', 'G-M6KQHNY94C')
+    window.gtag('config', 'G-M6KQHNY94C')
   </script>
 </Fragment>
