--- a/src/components/GameMappingDetails.astro
+++ b/src/components/GameMappingDetails.astro
@@ -16,7 +16,10 @@ const { game, mapping } = Astro.props
 <div
   class="bg-white-200 text-black dark:bg-[#0d1115] dark:border-[#192129] shadow-lg border dark:shadow-none border-stone-200 dark:text-white flex flex-wrap justify-center p-6 gap-6 rounded-2xl"
 >
-  <img class="grow-0 m-0 max-h-64 max-w-[50vw] rounded" src={game.image} />
+  <img
+    class="grow-0 m-0 max-h-64 max-w-[50vw] rounded border shadow border-stone-200 dark:border-[#192129]"
+    src={game.image}
+  />
   <div class="grow basis-40">
     <a href={game.bgg} class="!bg-none text-current text-3xl"
       ><span>{game.name}</span><i class="ti ti-external-link ml-1"></i></a
