--- a/src/pages/games.astro
+++ b/src/pages/games.astro
@@ -47,7 +47,7 @@ const sortedPosts = posts.sort(
               class="flex unset hover:text-text-link items-center gap-4 p-2"
             >
               <img
-                class="grow-0 m-0 max-h-24 max-w-[6rem] rounded"
+                class="grow-0 m-0 max-h-24 max-w-[6rem] rounded shadow border border-stone-200 dark:border-[#192129]"
                 src={game.image}
               />
               <div class="leading-normal">
