--- a/src/pages/games.astro
+++ b/src/pages/games.astro
@@ -38,10 +38,25 @@ const sortedPosts = posts.sort(
         >With the DIY Multideck</span
       >
     </h1>
-    <ul class="unset space-y-4">
+    <div class="relative">
+      <input
+        class="w-full px-4 py-3 pr-12 rounded-lg outline-none focus-visible:ring-4 ring-blue-400 border bg-white dark:bg-[#0d1115] border-stone-200 dark:border-[#192129] shadow-lg dark:shadow-none"
+        type="search"
+        name="search"
+        id="search"
+        placeholder="Search"
+        aria-label="Search"
+      />
+      <i class="ti ti-search absolute text-[1.5rem] top-3 right-3"></i>
+    </div>
+
+    <ul class="unset space-y-4 mt-8">
       {
         sortedPosts.map(({ frontmatter: { game, mapping }, slug }) => (
-          <li class="text-xl font-bold rounded-lg p-0 border bg-white dark:bg-[#0d1115] border-stone-200 dark:border-[#192129] shadow-lg dark:shadow-none">
+          <li
+            data-searchable={game.name}
+            class="text-xl font-bold rounded-lg p-0 border bg-white dark:bg-[#0d1115] border-stone-200 dark:border-[#192129] shadow-lg dark:shadow-none"
+          >
             <a
               href={`/games/${slug}`}
               class="flex unset hover:text-text-link items-center gap-4 p-2"
@@ -64,5 +79,41 @@ const sortedPosts = posts.sort(
         ))
       }
     </ul>
+    <div
+      id="no-results"
+      class="hidden py-8 text-2xl text-center text-stone-500 dark:text-slate-200 border-2 border-dashed border-stone-200 dark:border-[#192129] rounded-2xl"
+    >
+      <span>No results</span>
+    </div>
   </section>
 </PageLayout>
+
+<script>
+  const searchInput = document.getElementById(
+    'search'
+  ) as HTMLInputElement | null
+  if (!searchInput) throw new Error("search element doesn't exist")
+  const noResultsElement = document.getElementById(
+    'no-results'
+  ) as HTMLDivElement | null
+  if (!noResultsElement) throw new Error("no-results element doesn't exist")
+
+  searchInput.addEventListener('keyup', () => {
+    const elements = document.querySelectorAll<HTMLElement>('[data-searchable]')
+    elements.forEach((element) => {
+      const isMatch = element.dataset.searchable?.includes(searchInput.value)
+      if (isMatch) {
+        element.classList.remove('hidden')
+      } else {
+        element.classList.add('hidden')
+      }
+    })
+    if (
+      [...elements].every((element) => element.classList.contains('hidden'))
+    ) {
+      noResultsElement.classList.remove('hidden')
+    } else {
+      noResultsElement.classList.add('hidden')
+    }
+  })
+</script>
